@@ -4,6 +4,7 @@ dsm news!
  * transect type (line or point) is now determined from the detection function rather than using the transect= argument
  * multiple detection functions are now possible, use a list() of fitted detection functions supplied to ddf.obj= argument to dsm(). dsm.var.gam, dsm.var.prop and dsm_varprop are compatible. Vignette coming soon. Thanks to Dave Fifield and Ewan Wakefield for extensive testing and suggestions.
  * strip transects now handled using the dummy_ddf() function.
+ * presence~ response type removed
 
 # 2.3.0
  * fixed dsm_varprop (gam.fixed.priors) for response distributions with fixed scale parameters. Negative binomial results before now may have been incorrect!
